--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,16 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "paths": {
+      "@common/*": ["src/common/*"],
+      "@utils/*": ["src/common/utils/*"],
+      "@enum/*": ["src/common/enum/*"],
+      "@modules/*": ["src/modules/*"],
+      "@config/*": ["src/config/*"],
+      "@controllers/*": ["src/controllers/*"],
+      "@services/*": ["src/services/*"],
+      "@libs/*": ["src/libs/*"],
+    },
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
